# dasher

./: .flake8  App.py  README.md  app.py  linting.sh  pyproject.toml  requirements.txt
app/: config.py  create_db.py  read_db.py
app/db/: dasher.db
pages/: 1_Stock Return Dashboard.py  1_Stock Return.py  2_Volatility.py  3_Stock Performance.py  Display_Metrics.py  Metrics_Dashboard.py  Plot_Risk_Score.py
slides/: template.pptx
src/: common.py  config.py  create_db.py  create_db_stock.py  generate_power_point.py  load_data.py
src/db/: dasher.db  dasher_stock.db  reports.csv
