[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dasher"
version = "0.1.0"
description = "Dashboard builder in Python"
authors = [{ name = "Henrik Aasen Kjeldsberg", email = "henrik.kjeldsberg@live.no" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib==3.9.2",
    "streamlit>=1.40.2",
    "python-pptx==1.0.0",
    "snowflake-connector-python==3.12.4",
    "starlette>=0.37.2",
    "yfinance>=0.2.50"
]

[project.optional-dependencies]
test = [
    "isort>=5.13.2",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "flake8>=7.1.1",
    "black>=24.8.0",
    "httpx>=0.27.0"
]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ['tests']
filterwarnings = [
    "ignore::DeprecationWarning:holidays",
    "ignore::UserWarning:starlette",
]

[tool.setuptools.packages.find]
include = ["app"]